test_scores/negative_dimers/features/Q86VM9.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q86VM9.pkl.xz